Added Fishing Net item and improved Textures

--- a/src/main/resources/assets/fishingrevamp/lang/en_us.json
+++ b/src/main/resources/assets/fishingrevamp/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.fishingrevamp.net_rod": "Net Rod"
+  "item.fishingrevamp.net_rod": "Net Rod",
+  "item.fishingrevamp.fishing_net": "Fishing Net"
 }
