Added String Hook and Reinforced String. Completed Net Rod.

--- a/src/main/resources/assets/fishingrevamp/lang/en_us.json
+++ b/src/main/resources/assets/fishingrevamp/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.fishingrevamp.net_rod": "Net Rod",
-  "item.fishingrevamp.fishing_net": "Fishing Net"
+  "item.fishingrevamp.fishing_net": "Fishing Net",
+  "item.fishingrevamp.reinforced_string": "Reinfored String",
+  "item.fishingrevamp.string_hook": "String Hook"
 }
